--- a/Web4/BlendedAPI/vyzva/Views/lector/eval.html
+++ b/Web4/BlendedAPI/vyzva/Views/lector/eval.html
@@ -1,1 +1,1 @@
-﻿<div vyzva$lector$tabs act-idx="ts.tabIdx" ts="ts"></div>
+﻿<div vyzva$lector$tabs act-idx="ts.tabIdx"  do-navigate="ts.navigateWrapper()"></div>
