--- a/Web4/BlendedAPI/vyzva/Views/managerSchool.html
+++ b/Web4/BlendedAPI/vyzva/Views/managerSchool.html
@@ -71,7 +71,7 @@
   TODO: vysvětlení
   <br />
   <br />
-  <h3>Školní administrátoři</h3>
+  <h3>Administrátoři školy</h3>
   <div vyzva$managerchool$usekeys items="::ts.company.managerKeys"></div>
   <div ng-repeat="grp in ::ts.company.studyGroups">
     <h4>
