--- a/Web4/BlendedAPI/vyzva/Views/lector/_tabs.html
+++ b/Web4/BlendedAPI/vyzva/Views/lector/_tabs.html
@@ -1,7 +1,7 @@
-﻿<tabset type="pills" class="lm-tabs">
+﻿<tabset type="pills" class="lm-top-margin">
   <tab ng-repeat="it in ::tabs" heading="{{::it.shortTitle}}" select="navigate(it.idx)" active="::it.idx==actIdx()"></tab>
 </tabset>
-<div class="container lm-tabs-header">
+<div class="lm-tabs-header">
   <h3>{{::tabs[actIdx()].shortTitle || tabs[actIdx()].longTitle}}</h3>
 </div>
 
