--- a/Web4/BlendedAPI/vyzva/Views/exercise/instruction.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise/instruction.html
@@ -1,4 +1,4 @@
-﻿<div class="instruction" ng-controller="collapsable" ng-if="user().short.done && !state().exerciseIsTest">
+﻿<!--<div class="instruction" ng-controller="collapsable" ng-if="user().short.done && !state().exerciseIsTest">
   <div class="header header-done">
     <div class="btn btn-default btn-sm reset-btn" ng-click="doReset()()">
       <span class="fa fa-recycle"></span>
@@ -14,4 +14,4 @@
     &nbsp;&nbsp;&nbsp;&nbsp;<span class="more fa fa-ellipsis-h fa-lg"></span>
   </div>
   <div collapse="isCollapsed" class="body" ng-bind-html="::data().body | rawhtml"></div>
-</div>
+</div>-->
