--- a/Web4/BlendedAPI/vyzva/Views/home.html
+++ b/Web4/BlendedAPI/vyzva/Views/home.html
@@ -4,35 +4,65 @@
   </div>
   <div class="list-group">
     <!--<a href="#" class="list-group-item" ng-repeat="group in ts.parent.lectorGroups" ng-click="gotoLector(group.groupId)" xui-sref="pg.ajs.vyzva.lector({groupid:group.groupId})">{{::group.title}}</a>-->
-    <a href="#" class="list-group-item" ng-repeat="group in ts.parent.lectorGroups" ng-click="ts.gotoLector(group.groupId)" >{{::group.title}}</a>
+    <a href="#" class="list-group-item" ng-repeat="group in ts.parent.lectorGroups" ng-click="ts.gotoLector(group.groupId)">{{::group.title}}</a>
   </div>
 </div>
 
-<div class="panel panel-primary lm-top-margin" ng-if="::ts.parent.isStudent">
+<div ng-click="::ts.debugClearProduct()">del</div>
+<div class="panel panel-primary lm-top-margin home-course" ng-if="::ts.parent.isStudent">
   <div class="panel-heading">
     <h3>
-      <span ng-if="ts.pretestStatus==2">Rozřazovací test</span>
-      <b ng-if="ts.pretestStatus==1">Kurz úrovně {{ts.pretestLevel | levelText}}</b>
+      <span ng-if="ts.learnPlan[0].status<=1">Rozřazovací test</span>
+      <b ng-if="ts.learnPlan[0].status>1">Kurz úrovně {{::ts.pretestLevel | levelText}}</b>
     </h3>
+    <span ng-if="ts.learnPlan[0].status>1" class="more fa fa-bars fa-lg"></span>
   </div>
   <ul class="list-group study-plan">
-    <li class="list-group-item" ng-class="::ts.pretestStatus | vyzva$home$nodeclass">
-      <div vyzva$home$nodemarks status="::ts.pretestStatus" api="::api()" index="1"></div>
-      <div vyzva$home$pretest ts="::ts.parent" api="::api()"></div>
-    </li>
-    <li class="list-group-item" ng-repeat="node in ::ts.learnPlan" ng-class="::node.status | vyzva$home$nodeclass">
-      <div vyzva$home$nodemarks status="::node.status" api="::api()" index="::node.idx"></div>
-      <div vyzva$home$item ts="::node" api="::api()"></div>
+    <li class="list-group-item" ng-repeat="lesson in ::ts.learnPlan" ng-class="::lesson | vyzva$home$nodeclass">
+      <div ng-if="::lesson.lessonType==0" ng-include="'vyzva$home$pretest.html'"></div>
+      <div ng-if="::lesson.lessonType==1" ng-include="'vyzva$home$lesson.html'"></div>
+      <div ng-if="::lesson.lessonType==2" ng-include="'vyzva$home$test.html'"></div>
     </li>
   </ul>
 </div>
 
-<script type="text/ng-template" id="vyzva$home$nodemarks.html">
+<script type="text/ng-template" id="vyzva$home$leftmark.html">
   <div class="left-mark">
-    {{index()}}
+    <i class="fa" ng-class="::lesson | vyzva$home$iconclass"></i>
   </div>
-  <div class="right-mark">
-    <button class="btn btn-info" ng-if="status()==1">Výsledky <i class="fa fa-eye"></i></button>
-    <button class="btn btn-success" ng-disabled="api().ctx.onbehalfof" ng-if="status()==2">Spustit <i class="fa fa-play"></i></button>
+</script>
+
+<script type="text/ng-template" id="vyzva$home$rightbutton.html">
+  <div class="right-mark" ng-click="::ts.navigateLesson(lesson)">
+    <button class="btn btn-info" ng-if="lesson.status>1">Výsledky <i class="fa fa-eye"></i></button>
+    <button class="btn btn-success" ng-disabled="api().ctx.onbehalfof" ng-if="lesson.status<=1">Spustit <i class="fa fa-play"></i></button>
   </div>
+</script>
+
+<script type="text/ng-template" id="vyzva$home$pretest.html">
+  <div ng-include="'vyzva$home$leftmark.html'"></div>
+  <div data-ng-if="::lesson.status<2">
+    <p>
+      <button class="btn btn-success btn-lg" ng-disabled="api().ctx.onbehalfof" data-ng-click="::ts.navigateLesson(lesson)">
+        {{::lesson.status==0 ? 'Začněte spuštěním testu' : 'Dokončete test'}}
+      </button>
+    </p>
+    Test určí vaši jazykovou úroveň (A1, A2, B1 nabo B2), na základě které se zvolí odpovídající pokračování vašeho kurzu.
+  </div>
+  <div data-ng-if="::lesson.status>=2">
+    <h4>Test dokončen: vaše jazyková úroveň je {{::ts.pretestLevel | levelText}}</h4>
+    <div class="btn-group right-mark">
+      <button type="button" ng-repeat="level in ::ts.pretestLevels" class="btn btn-info btn-sm" ng-click="::ts.navigatePretestLevel(level)">{{level | levelText}} <i class="fa fa-eye"></i></button>
+    </div>
+  </div>
+</script>
+
+<script type="text/ng-template" id="vyzva$home$lesson.html">
+  <div ng-include="'vyzva$home$leftmark.html'"></div>
+  <h4 ng-click="::ts.navigateLesson(lesson)">L: {{::lesson.node.title}}</h4>
+</script>
+
+<script type="text/ng-template" id="vyzva$home$test.html">
+  <div ng-include="'vyzva$home$leftmark.html'"></div>
+  <h4 ng-click="::ts.navigateLesson(lesson)">T: {{::lesson.node.title}}</h4>
 </script>
