--- a/Web4/BlendedAPI/Styles/style.css
+++ b/Web4/BlendedAPI/Styles/style.css
@@ -42,6 +42,9 @@
     }
   }*/
 }
+.bl .container-fluid {
+  padding: 0;
+}
 .bl .breadcrumb {
   margin-bottom: 0;
 }
@@ -54,6 +57,15 @@
 }
 .bl .lm-top-margin {
   margin-top: 20px;
+}
+.bl .lm-bottom-margin {
+  margin-bottom: 20px;
+}
+.bl .lm-bottom-margin-lg {
+  margin-bottom: 30px;
+}
+.bl .lm-top-margin-lg {
+  margin-top: 40px;
 }
 .bl .more {
   position: absolute;
@@ -277,9 +289,64 @@ fieldset[disabled] .bl .module-map-item.active.active {
   color: #f0ad4e;
   background-color: #ffffff;
 }
+.bl .ex-module {
+  background-color: #f5f5f5;
+}
+.bl .ex-module .header {
+  position: relative;
+  padding-right: 30px;
+}
+.bl .ex-module .header .more {
+  top: 7px;
+  right: 10px;
+  font-size: 20px;
+}
+.bl .ex-module.expanded .header {
+  border-bottom: 0;
+}
+.bl .ex-module .body {
+  padding: 0 10px;
+  padding-bottom: 10px;
+}
+.bl .ex-module .body h4 {
+  margin-top: 10px;
+}
+.bl .ex-module .ex-item {
+  display: inline-block;
+  position: relative;
+  width: 36px;
+  height: 36px;
+  font-size: 12px;
+  border: solid 1px transparent;
+  cursor: pointer;
+  line-height: 36px;
+  text-align: center;
+}
+.bl .ex-module .ex-item.success {
+  background-color: #5cb85c;
+  border-color: #4cae4c;
+  color: white;
+}
+.bl .ex-module .ex-item.warning {
+  background-color: #f0ad4e;
+  border-color: #eea236;
+  color: white;
+}
+.bl .ex-module .ex-item .progress-red {
+  position: absolute;
+  background-color: #ff6022;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+.bl .ex-module .no-clickable.ex-item {
+  cursor: default;
+}
 .bl .instruction {
-  background-color: #dff0d8;
-  border: 1px solid #d6e9c6;
+  /*background-color: @alert-success-bg;
+    border: 1px solid @alert-success-border;*/
+  background-color: #f5f5f5;
+  border: 1px solid #dddddd;
   border-radius: 4px;
   padding-left: 15px;
 }
@@ -296,11 +363,11 @@ fieldset[disabled] .bl .module-map-item.active.active {
   right: 3px;
 }
 .bl .instruction .header .more {
-  top: 3px;
+  top: 1px;
   right: 10px;
+  font-size: 20px;
 }
 .bl .instruction .body {
-  color: #3c763d;
   padding-top: 10px;
 }
 .bl .instruction .body h1 {
@@ -318,6 +385,34 @@ fieldset[disabled] .bl .module-map-item.active.active {
 }
 .bl .instruction .body ol {
   margin: 0 0 10px 25px;
+}
+.bl .score-bar {
+  display: inline-block;
+  position: relative;
+  background-color: #5cb85c;
+  width: 50px;
+  height: 20px;
+  vertical-align: top;
+}
+.bl .score-bar .progress-red {
+  position: absolute;
+  background-color: #ff6022;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 2;
+}
+.bl .score-bar .score-text {
+  position: absolute;
+  text-align: center;
+  color: white;
+  right: 0;
+  font-size: 14px;
+  line-height: 20px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 20;
 }
 .bl .lm-tabs-header {
   margin-top: -1px;
