--- a/Web4/BlendedAPI/Styles/style.less
+++ b/Web4/BlendedAPI/Styles/style.less
@@ -1,10 +1,18 @@
 ﻿@import "../../bs3/less/mixins/alerts.less";
 @import "../../bs3/less/mixins/gradients.less";
 @import "../../bs3/less/mixins/background-variant.less";
+@import "../../bs3/less/mixins/border-radius.less";
 @import "../../bs3/less/mixins/buttons.less";
 @import "../../bs3/less/variables.less";
 
+
 .bl {
+
+  @oli-red: #ff6022;
+
+  .container-fluid {
+    padding: 0;
+  }
 
   .breadcrumb {
     margin-bottom: 0;
@@ -23,6 +31,19 @@
 
   .lm-top-margin {
     margin-top: 20px;
+  }
+
+  .lm-bottom-margin {
+    margin-bottom: 20px;
+  }
+
+  .lm-bottom-margin-lg {
+    margin-bottom: 30px;
+  }
+
+
+  .lm-top-margin-lg {
+    margin-top: 40px;
   }
 
   .more {
@@ -207,7 +228,7 @@
       }
     }
   }
-  //
+  //VYHODIT
   .module-map-items {
     margin-top: 10px;
     margin-left: 1px;
@@ -231,9 +252,83 @@
     }
   }
 
+  .ex-module {
+    background-color: @panel-default-heading-bg;
+
+    .header {
+      //border: 1px solid @panel-default-border;
+      //border-radius: @alert-border-radius;
+      position: relative;
+
+      .more {
+        top: 7px;
+        right: 10px;
+        font-size: 20px;
+      }
+
+      padding-right: 30px;
+    }
+
+    &.expanded .header {
+      //.border-bottom-radius(0);
+      border-bottom: 0;
+    }
+
+    .body {
+      //border: 1px solid @panel-default-border;
+      //border-radius: @alert-border-radius;
+      //border-top: 0;
+      //.border-top-radius(0);
+      padding: 0 10px;
+      padding-bottom: 10px;
+
+      h4 {
+        margin-top: 10px;
+      }
+    }
+
+    .ex-item {
+      display: inline-block;
+      position: relative;
+      width: 36px;
+      height: 36px;
+      font-size: 12px;
+      border: solid 1px transparent; // @panel-default-border;
+      cursor: pointer;
+      line-height: 36px;
+      text-align: center;
+
+      &.success {
+        background-color: @btn-success-bg;
+        border-color: @btn-success-border;
+        color: white;
+      }
+
+      &.warning {
+        background-color: @btn-warning-bg;
+        border-color: @btn-warning-border;
+        color: white;
+      }
+
+      .progress-red {
+        position: absolute;
+        background-color: @oli-red;
+        left: 0;
+        right: 0;
+        top: 0;
+      }
+    }
+
+    .no-clickable.ex-item {
+      cursor: default;
+    }
+  }
+
   .instruction {
-    background-color: @alert-success-bg;
-    border: 1px solid @alert-success-border;
+    /*background-color: @alert-success-bg;
+    border: 1px solid @alert-success-border;*/
+    background-color: @panel-default-heading-bg;
+    border: 1px solid @panel-default-border;
     border-radius: @alert-border-radius;
     padding-left: 15px;
 
@@ -252,13 +347,14 @@
       }
 
       .more {
-        top: 3px;
+        top: 1px;
         right: 10px;
+        font-size: 20px;
       }
     }
 
     .body {
-      color: @alert-success-text;
+      //color: @alert-success-text;
       padding-top: 10px;
 
       h1 {
@@ -279,6 +375,37 @@
       ol {
         margin: 0 0 10px 25px;
       }
+    }
+  }
+
+  .score-bar {
+    display: inline-block;
+    position: relative;
+    background-color: @btn-success-bg;
+    width: 50px;
+    height: 20px;
+    vertical-align: top;
+
+    .progress-red {
+      position: absolute;
+      background-color: @oli-red;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      z-index: 2;
+    }
+
+    .score-text {
+      position: absolute;
+      text-align: center;
+      color: white;
+      right: 0;
+      font-size: 14px;
+      line-height: 20px;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      z-index: 20;
     }
   }
 
