--- a/Web4/BlendedAPI/vyzva/Views/toolbar/Module.html
+++ b/Web4/BlendedAPI/vyzva/Views/toolbar/Module.html
@@ -1,3 +1,3 @@
-﻿<button class="btn btn-success btn-lg" data-ng-click="::ts.tbClick()" >{{::ts.tbTitle}}</button>
+﻿<!--<button class="btn btn-success btn-lg" data-ng-click="::ts.tbClick()" >{{::ts.tbTitle}}</button>
 <button class="btn btn-default btn-lg" data-ng-click="::ts.tbSkipClick()">Vynechat</button>
-<button class="btn btn-default btn-lg" data-ng-click="::ts.tbFinishClick()">Ukončit</button>
+<button class="btn btn-default btn-lg" data-ng-click="::ts.tbFinishClick()">Ukončit</button>-->
